MDEV-23492 performance_schema_digests_size changing from default to 5000 when enabling performance_schema

max allowed value limit should be larger than any auto-sized value